--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
         </div>
     </div>
     <div class="graph"></div>
+    <div class="popup">
+        <p>Clear the board first</p>
+    </div>
     <script type="module" src="script.js"></script>
 </body>
 
