--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
     </div>
     <div class="graph"></div>
-    <div id="popup">
+    <div id="popup" style="display: none;">
         <p>Clear the board first</p>
     </div>
     <script type="module" src="script.js"></script>
