--- a/index.html
+++ b/index.html
@@ -21,73 +21,83 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position: absolute;top: 0;z-index: 10;">
         <a href="" class="navbar-brand">AlgoGraph</a>
-        <ul class="navbar-nav">
-            <li class="nav-item point-type"><button value=1>Add Wall</button></li>
-            <li class="nav-item point-type"><button value=2 class='weight'>Add Medium Weight</button></li>
-            <li class="nav-item point-type"><button value=3 class='weight'>Add High Weight</button></li>
-            <li class="nav-item point-type"><button value=4>Eraser</li>
-            <li class="nav-item point-type"><button value=5>Clear Board</button></li>
-            <li class="nav-item">
-                <div class="dropdown">
-                    <button name="" id="selected-algorithm" class="algo dropdown-toggle" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">Algorithm</button>
-                    <div class="dropdown-menu" aria-labelledby="selected-algorithm" id="selected-algo-dropdown">
-                        <a class="dropdown-item" value="1">Dijkastra's Algorithm</a>
-                        <a class="dropdown-item" value="2">A* Search Algorithm</a>
-                        <a class="dropdown-item" value="3">Best First Search</a>
-                        <a class="dropdown-item" value="4">Breadth First Search</a>
-                        <a class="dropdown-item" value="5">Depth First Search</a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbar">
+            <ul class="navbar-nav">
+                <li class="nav-item point-type"><button value=1>Add Wall</button></li>
+                <li class="nav-item point-type"><button value=2 class='weight'>Add Medium Weight</button></li>
+                <li class="nav-item point-type"><button value=3 class='weight'>Add High Weight</button></li>
+                <li class="nav-item point-type"><button value=4>Eraser</li>
+                <li class="nav-item point-type"><button value=5>Clear Board</button></li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <button name="" id="selected-algorithm" class="algo dropdown-toggle" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">Algorithm</button>
+                        <div class="dropdown-menu" aria-labelledby="selected-algorithm" id="selected-algo-dropdown">
+                            <a class="" value="1">Dijkastra's Algorithm</a>
+                            <a class="dropdown-item" value="2">A* Search Algorithm</a>
+                            <a class="dropdown-item" value="3">Best First Search</a>
+                            <a class="dropdown-item" value="4">Breadth First Search</a>
+                            <a class="dropdown-item" value="5">Depth First Search</a>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li class="nav-item">
-                <div class="dropdown">
-                    <button id="speed" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">Speed</button>
-                    <div class="dropdown-menu" aria-labelledby="speed" id="speed-dropdown">
-                        <a class="dropdown-item" value=0.01>Fast</a>
-                        <a class="dropdown-item" value=0.05>Medium</a>
-                        <a class="dropdown-item" value=0.1>Slow</a>
+                </li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <button name="" id="speed" class="algo dropdown-toggle" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">Speed</button>
+                        <div class="dropdown-menu row" aria-labelledby="speed" id="speed-dropdown">
+                            <a class="dropdown-item col" value=0.01>Fast</a>
+                            <a class="dropdown-item col" value=0.05>Medium</a>
+                            <a class="dropdown-item col" value=0.1>Slow</a>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li class="nav-item">
-                <button id="run">Run</button>
-            </li>
-        </ul>
+                </li>
+                <li class="nav-item">
+                    <button id="run">Run</button>
+                </li>
+            </ul>
+        </div>
     </nav>
-    <div class="legend">
-        <div class="item">
-            <div class="logo"><i class="fas fa-star-of-life"></i></div>
-            <div class="description">Starting Point</div>
+    <table>
+        <div class="legend">
+            <div class="item col">
+                <div class="logo"><i class="fas fa-star-of-life"></i></div>
+                <div class="description">Starting Point</div>
+            </div>
+            <div class="item col">
+                <div class="logo high"><i class="far fa-dot-circle"></i></div>
+                <div class="description">Ending Point</div>
+            </div>
+            <div class="item  col">
+                <div class="logo wall"></div>
+                <div class="description">Wall</div>
+            </div>
+            <div class="item  col">
+                <div class="logo visited"></div>
+                <div class="description">Visited Cell</div>
+            </div>
+            <div class="item  col">
+                <div class="logo path"></div>
+                <div class="description">Shortest</div>
+            </div>
+            <div class="item  col">
+                <div class="logo"><i class="fas fa-weight-hanging"></i></div>
+                <div class="description">Medium weight</div>
+            </div>
+            <div class="item  col">
+                <div class="logo"><i class="fas fa-dumbbell"></i></div>
+                <div class="description">High weight</div>
+            </div>
         </div>
-        <div class="item">
-            <div class="logo high"><i class="far fa-dot-circle"></i></div>
-            <div class="description">Ending Point</div>
-        </div>
-        <div class="item">
-            <div class="logo wall"></div>
-            <div class="description">Wall</div>
-        </div>
-        <div class="item">
-            <div class="logo visited"></div>
-            <div class="description">Visited Cell</div>
-        </div>
-        <div class="item">
-            <div class="logo path"></div>
-            <div class="description">Shortest</div>
-        </div>
-        <div class="item">
-            <div class="logo"><i class="fas fa-weight-hanging"></i></div>
-            <div class="description">Medium weight</div>
-        </div>
-        <div class="item">
-            <div class="logo"><i class="fas fa-dumbbell"></i></div>
-            <div class="description">High weight</div>
-        </div>
-    </div>
+    </table>
     <div class="graph"></div>
     <div id="popup" style="display: none;">
         <p>Clear the board first</p>
