--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <button name="" id="selected-algorithm" class="algo dropdown-toggle" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">Algorithm</button>
                         <div class="dropdown-menu" aria-labelledby="selected-algorithm" id="selected-algo-dropdown">
-                            <a class="" value="1">Dijkastra's Algorithm</a>
+                            <a class="dropdown-item" value="1">Dijkastra's Algorithm</a>
                             <a class="dropdown-item" value="2">A* Search Algorithm</a>
                             <a class="dropdown-item" value="3">Best First Search</a>
                             <a class="dropdown-item" value="4">Breadth First Search</a>
